--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "bootstrap": "^5.2.2",
     "next": "13.0.2",
     "react": "18.2.0",
+    "react-countup": "^6.3.2",
     "react-dom": "18.2.0",
+    "react-slick": "^0.29.0",
+    "react-visibility-sensor": "^5.1.1",
     "remixicon": "^2.5.0"
   }
 }
